--- a/components/buttons/index.html
+++ b/components/buttons/index.html
@@ -28,16 +28,16 @@
     <nav class="navbar">
       <ul class="menu-list">
         <li class="menu-item">
-          <a href="components/buttons/index.html" target="_blank">Buttons</a>
+          <a href="index.html" target="_blank">Buttons</a>
         </li>
         <li class="menu-item">
-          <a href="components/cards/index.htm" target="_blank">Cards</a>
+          <a href="../../components/cards/index.html" target="_blank">Cards</a>
         </li>
         <li class="menu-item">
-          <a href="components/forms/index.htm" target="_blank">Forms</a>
+          <a href="../../components/forms/index.html" target="_blank">Forms</a>
         </li>
         <li class="menu-item">
-          <a href="components/sidebar/index.htm" target="_blank">Sidebar</a>
+          <a href="../../components/sidebar/index.html" target="_blank">Sidebar</a>
         </li>
 
       </ul>
@@ -45,33 +45,44 @@
   </header>
 
   <main class="buttons-page">
-    <section class="buttons">
-      <code>
+    <div class="container">
+
+      <h3 class="title is-2">My buttons</h3>
+      <h6 class="subtitle">A list of buttons for all uses</h6>
+      <hr>
+      <section class="buttons-list">
+        <button class="button is-primary"> Click me! </button>
+
+        <code>
             &#x3C;button class=&#x22;button is-primary&#x22;&#x3E;Click me! &#x3C;/button&#x3E;
           </code>
-      <button class="button is-primary"> Click me! </button>
-      <hr>
-      <code>
+        <hr>
+        <button class="button is-danger"> Click me! </button>
+
+        <code>
             &#x3C;button class=&#x22;button is-danger&#x22;&#x3E;Click me! &#x3C;/button&#x3E;
           </code>
-      <button class="button is-danger"> Click me! </button>
-      <hr>
-      <code>
+        <hr>
+        <button class="button is-success"> Click me! </button>
+
+        <code>
             &#x3C;button class=&#x22;button is-success&#x22;&#x3E;Click me! &#x3C;/button&#x3E;
       </code>
-      <button class="button is-success"> Click me! </button>
-      <hr>
-      <code>
+        <hr>
+        <button class="button is-info"> Click me! </button>
+
+        <code>
             &#x3C;button class=&#x22;button is-info&#x22;&#x3E;Click me! &#x3C;/button&#x3E;
       </code>
-      <button class="button is-info"> Click me! </button>
-      <hr>
-      <code>
+        <hr>
+        <button class="button is-warning"> Click me! </button>
+        <code>
             &#x3C;button class=&#x22;button is-warning&#x22;&#x3E;Click me! &#x3C;/button&#x3E;
       </code>
-      <button class="button is-warning"> Click me! </button>
-      <hr>
-    </section>
+        <hr>
+      </section>
+    </div>
+
   </main>
 
   <footer class="footer">
