--- a/tvieira/styles.css
+++ b/tvieira/styles.css
@@ -1,8 +1,8 @@
-<style>
 
     body{
         margin:0px;
         background-color: #f1e8e8;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     }
 
     figure{
@@ -160,5 +160,3 @@
     .column .is-6{
         width:49.7%
     }
-
-</style>
