--- a/pedro/main.css
+++ b/pedro/main.css
@@ -41,7 +41,7 @@ figure {
 
 .header .logo {
     float: left;
-    padding: 8px;
+    padding: 10px 0 0 10px;
     margin: 0;
 }
 
@@ -79,7 +79,7 @@ figure {
 
 .menu-list {
     list-style: none;
-    padding: 0;
+    padding: 10px 10px 0 0;
     margin: 0;
     float: right;
 }
