--- a/vitor/components/grid/index.html
+++ b/vitor/components/grid/index.html
@@ -25,19 +25,19 @@
     
             <ul class="menu-list">
                 <li class="menu-item">
-                    <a href="components/buttons/index.html" target="_blank">Buttons</a>
+                    <a href="../../components/buttons/index.html" target="_blank">Buttons</a>
                 </li>
                 <li class="menu-item">
-                    <a href="components/cards/index.html" target="_blank">Cards</a>
+                    <a href="../../components/cards/index.html" target="_blank">Cards</a>
                 </li>
                 <li class="menu-item">
-                    <a href="components/forms/index.html" target="_blank">Forms</a>
+                    <a href="../../components/forms/index.html" target="_blank">Forms</a>
                 </li>
                 <li class="menu-item">
-                    <a href="components/grid/index.html" target="_blank">Grid</a>
+                    <a href="index.html" target="_blank">Grid</a>
                 </li>
                 <li class="menu-item">
-                    <a href="components/sidebar/index.html" target="_blank">Sidebar</a>
+                    <a href="../../components/sidebar/index.html" target="_blank">Sidebar</a>
                 </li>
             </ul>
         </nav>
