--- a/tvieira/main.css
+++ b/tvieira/main.css
@@ -2,11 +2,24 @@
     body{
         margin:0px;
         background-color: #f1e8e8;
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-family: ubuntu; 
+        font-size:14px;
+    }
+
+    main{
+        clear:both;
+      }
+
+    .has-background-primary {
+        background-color: #665df5;
+    }
+        
+    .has-text-primary {
+        color: #665df5;
     }
 
     figure{
-        margin:0px;
+        margin:0;
     }
 
     .title{
@@ -14,24 +27,34 @@
         font-weight: 300;
     }
 
-    .title .is-1 {
+    .subtitle{
+        font-weight: 300;
+    }
+
+    .title.is-1 {
         font-size: 48px;
     }
 
-    .title ~ .subtitle{
+    .title.is-2 {
+        font-size: 32px;
+    }
+
+    .title~.subtitle{
         margin-top:-16px;
     }
 
     .header{
         background-color: #f1e8e8;
         padding:8px;
+        min-height:40px;
     }
 
     .header .logo {
         float: left;
-        padding:8px;
-        margin: 0px;
+        padding: 8px;
+        margin: 0;
     }
+
     .header .logo img{
         height: 32px;
         border-radius:4px;
@@ -39,21 +62,25 @@
 
     .footer .logo img{
         height: 32px;
-        border-radius:4px;
+        filter:invert(100%);
     }
+
+    .footer .logo span{
+        vertical-align: top;
+      }
     
     .header .page-title{
-        font-weight:600 /*300 Light , 400 Regular, 500/600 Medium, 700 Semibold, 800 bold, 900 Black - 400 é o regular */
-        
+        font-weight:600;
+        color: #000;
     }
 
     .header .navbar{
-        float:right
+        float:right;
     }
 
 
     .hero{
-        margin: 64px 0;
+        margin: 64px 0 32px;
         position: relative;
         clear:both; /*depois de um float deve ser inserido*/
     }
@@ -62,9 +89,11 @@
         margin-top:64px;
     }
 
-    .hero .title{}
-    .hero .sutitle{}
-
+    .hero .title,
+    .hero .subtitle,
+    .hero p {
+        color: #373737;
+    }
 
     .hero .image{
         width:100%;
@@ -74,57 +103,77 @@
 
     .menu-list{
         list-style:none;
+        padding:0;
+        margin:0;
     }
 
-    .menu-list .menu-item {
+    .navbar .menu-list .menu-item{
         display: inline-block;
         padding: 8px;
-        background:rgb(235, 231, 231);
     }
 
-    .menu-list .menu-item a{
+    .navbar .menu-list .menu-item a{
         text-decoration: none;
         line-height:18px;
         color: #111;
     }
 
+    .footer-nav .menu-list {
+        display: inline-block;
+        padding: 8px;
+    }
+
+    .footer-nav .menu-list .menu-item a{
+        text-decoration: none;
+        line-height:18px;
+        color: #fff;
+    }
+
+
+
     .container{
         width: 800px;
         margin: auto;
-        vertical-align:top;
+        vertical-align:middle;
     }
 
     .card{
         background:#fff;
     }
 
-    .card > .card-content{
+    .card>.card-content{
         padding:16px;
     }
 
+    .icon{
+        padding: 8px;
+        border-radius:8px;
+    }
+
     .icon.is-yellow{
-        background: #faf8e8;
-        color:yellow;
+        background: #FAF8E0;
+        color: #FFD045;
         padding:8px;
         border-radius:4px;
     }
 
     .icon.is-green{
-        background: #f5fae8;
-        color:green;
+        background: #DCFCEF;
+        color:#02E879;
         padding:8px;
         border-radius:4px;
     }
     
     .icon.is-purple{
-        background: #f5e8fa;
-        color:purple;
+        background: #F4EBFD;
+        color: #B753E7;
         padding:8px;
         border-radius:4px;
     }
 
     .footer{
         background-color:#111;
+        padding: 32px;
     }
 
     .footer .title{
@@ -135,14 +184,18 @@
     .footer label,
     .footer a,
     .footer span {
-        color: white;
+        color: #fff;
     }
 
     .is-vertical-top{
         vertical-align: top;
     }
 
-    .column {
+    .is-vertical-middle{
+        vertical-align:baseline;
+    }
+
+   /* .column {
         display: inline-block;
         vertical-align: top;
         box-sizing: border-box;
@@ -159,4 +212,4 @@
 
     .column .is-6{
         width:49.7%
-    }
+    }  */
