--- a/jose/components/buttons/index.html
+++ b/jose/components/buttons/index.html
@@ -13,7 +13,7 @@
     integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
     crossorigin="anonymous" />
   <link rel="stylesheet" href="../../styles/main.css" />
-  <link rel="stylesheet" href="button.css" />
+  <link rel="stylesheet" href="buttons.css" />
 </head>
 
 <body>
