--- a/jose/components/grid/grid.css
+++ b/jose/components/grid/grid.css
@@ -3,6 +3,7 @@
   justify-content: space-between;
   margin-left: -16px;
   margin-right: -16px;
+  flex-wrap: wrap;
 } 
 .column{
   vertical-align: top;
