--- a/jose/components/buttons/buttons.css
+++ b/jose/components/buttons/buttons.css
@@ -19,6 +19,7 @@
   box-sizing: border-box;
   transition: background-color .2s ease-in;
   text-decoration: none;
+  text-transform: uppercase;
 }
 
 .button:not(:last-child){
