--- a/jose/styles/main.css
+++ b/jose/styles/main.css
@@ -14,7 +14,7 @@ main{
 }
 
 section{
-  margin:32px 16px;
+  padding:32px 16px;
 }
 
 .has-background-primary {
@@ -44,10 +44,14 @@ figure {
 }
 
 .title.is-2 {
-  font-size: 32px;
+  font-size: 48px;
 }
 
 .title.is-3 {
+  font-size: 32px;
+}
+
+.title.is-4 {
   font-size: 24px;
 }
 
@@ -82,6 +86,27 @@ figure {
   border-radius:8px;
 }
 
+.main-section{
+  background: #04050A;
+}
+
+.main-section h1,
+.main-section h2,
+.main-section h3,
+.main-section h4,
+.main-section h5,
+.main-section h6{
+  color:#fff;
+}
+
+.main-section .card{
+  background:#212121;
+}
+
+.main-section p{
+  color:#bbb;
+}
+
 .footer .logo img{
   height:32px;
   border-radius:8px;
@@ -111,6 +136,11 @@ figure {
   clear: both;
   background: #04050A;
 }
+
+.hero .column.is-7{
+  padding-right:128px;
+}
+
 .hero .title,
 .hero .subtitle{
   color: #fff;
@@ -122,7 +152,6 @@ figure {
 
 .hero .image {
   max-width: 100%;
-  padding: 16px;
   box-sizing: border-box;
 }
 
@@ -147,27 +176,80 @@ figure {
   line-height: 18px;
 }
 
+.navbar .menu-list .menu-item:last-child a {
+  color:#fff;
+}
+
 .footer-nav .menu-list {
 
 }
 
 .container {
-  width: 800px;
+  width: 1100px;
   margin: 0 auto;
 }
 
 .container.is-small{
-  width: 500px;
+  width: 600px;
   margin: 0 auto;
 }
 
 .card {
   background: #fff;
+  border-radius:8px;
 }
 
 .card>.card-content {
-  padding: 16px;
+  padding: 32px;
 }
+
+.product-card .card-content{
+  display: flex;
+  justify-content: space-between;
+}
+
+.product-image{
+  width:40%;
+  height:220px;
+  border-radius:8px;
+}
+
+.product-detail{
+  width:60%;
+  padding-left:32px;
+}
+.sales-price{
+  color:#FFD045;
+}
+.price{
+  font-size:70%;
+  color:#bbb;
+  text-decoration: line-through;
+}
+
+#product-row .column:nth-child(1) .product-image{
+  background-image:url('https://unsplash.com/photos/LxVxPA1LOVM/download?force=true');
+  background-size: cover;
+  background-position: center;
+}
+
+#product-row .column:nth-child(2) .product-image{
+  background-image:url('https://unsplash.com/photos/164_6wVEHfI/download?force=true');
+  background-size: cover;
+  background-position: center;
+}
+#product-row .column:nth-child(3) .product-image{
+  background-image:url('https://unsplash.com/photos/4qSb_FWhHKs/download?force=true');
+  background-size: cover;
+  background-position: center;
+}
+#product-row .column:nth-child(4) .product-image{
+  background-image:url('https://unsplash.com/photos/_fOL6ebfECQ/download?force=true');
+  background-size: cover;
+  background-position: center;
+}
+
+
 
 .icon {
   padding: 8px;
@@ -187,6 +269,16 @@ figure {
 .icon.is-purple {
   background: #F4EBFD;
   color: #B753E7;
+}
+
+.image img{
+  max-width: 100%;
+  display: block;
+}
+
+.image.has-radius{
+  border-radius: 8px;
+  overflow: hidden;
 }
 
 .footer {
