image resize, slider resize

--- a/jose/products/product.css
+++ b/jose/products/product.css
@@ -8,6 +8,16 @@
   overflow:hidden;
 }
 
+figure.image.slider-image img{
+  width: 550px;
+  height: auto;
+}
+
+figure.image img{
+  width: 120px;
+  height: 90px;
+}
+
 .slider .slider-items{
   display:flex;
 }
