--- a/tvieira/Components/Cards/cards.css
+++ b/tvieira/Components/Cards/cards.css
@@ -1,5 +1,10 @@
 .card{
     display:block;
     background: white;
-    border-radius: 
+    border-radius:4px; 
+}
+
+.card .card-content{
+    padding:16px;
+    box-sizing:border-box;
 }
