--- a/tvieira/Components/Buttons/index.html
+++ b/tvieira/Components/Buttons/index.html
@@ -5,16 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Roda-Cork</title>
+    <title>Buttons</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
-    <link rel="stylesheet" href="/tvieira/main.css" />
-    <link rel="stylesheet buttons" href="/tvieira/Components/Buttons/button.css" > 
-    <link rel="stylesheet cards" href="/tvieira/Components/Cards/cards.css" > 
-    <link rel="stylesheet forms" href="/tvieira/Components/forms/forms.css" > 
-    <link rel="stylesheet sidebar" href="/tvieira/Components/sidebar/sidebar.css" > 
-    <link rel="stylesheet" href="/tvieira/Components/Grid/grid.css" />
+    <link rel="stylesheet" href="/tvieira/styles/main.css" />
+    <link rel="stylesheet buttons" href="buttons.css" > 
 
 </head>
 
@@ -23,7 +19,7 @@
     <header class="header">
         
         <figure class="logo">
-            <img src="/tvieira/Img/rodacork.png" alt="logo">
+            <img src="/tvieira/images/rodacork.png" alt="logo Rodacork">
             <span class="page-title is-vertical-middle">
                 RodaCork
             </span>
@@ -32,19 +28,22 @@
     <nav class="navbar">
         <ul class="menu-list">
             <li class="menu-item">
-                <a href="Components/Buttons/index.html" target="_blank">Buttons</a>
+                <a href="/tvieira/components/buttons/index.html" target="_blank">Buttons</a>
             </li>
             <li class="menu-item">
-                <a href="Components/Cards/index.html" target="_blank">Cards</a>
+                <a href="/tvieira/components/cards/index.html" target="_blank">Cards</a>
             </li>
             <li class="menu-item">
-                <a href="Components/forms/index.html" target="_blank">Forms</a>
+                <a href="/tvieira/components/forms/index.html" target="_blank">Forms</a>
             </li>
             <li class="menu-item">
-                <a href="Components/sidebar/index.html" target="_blank">Sidebar</a>
+                <a href="/tvieira/components/sidebar/index.html" target="_blank">Sidebar</a>
             </li>
             <li class="menu-item">
-                <a href="Components/Grid/index.html" target="_blank">Grid</a>
+                <a href="/tvieira/components/grid/index.html" target="_blank">Grid</a>
+            </li>
+            <li class="menu-item">
+                <a href="/tvieira/dashboard/index.html" target="_blank">Dashboard</a>
             </li>
         </ul>
     </nav>
@@ -57,34 +56,76 @@
           <h6 class="subtitle">A list of buttons for all uses</h6>
           <hr>
           <section class="buttons-list">
-            <button class="button is-primary"> Click me! </button>
-    
+            <button class="button is-primary-orange"> À propos </button>
             <code>
-                &#x3C;button class=&#x22;button is-primary&#x22;&#x3E;Click me! &#x3C;/button&#x3E;
+                &#x3C;button class=&#x22;button is-primary-orange&#x22;&#x3E;À propos &#x3C;/button&#x3E;
               </code>
             <hr>
+
+            <button class="button is-primary-dark-orange"> Produits </button>
+            <code> 
+                &#x3C;button class=&#x22;button is-primary-dark-orange&#x22;&#x3E;Produits &#x3C;/button&#x3E;
+              </code>
+            <hr>
+
+            <button class="button is-primary-light-orange"> Conseils </button>
+            <code>
+                &#x3C;button class=&#x22;button is-primary-light-orange&#x22;&#x3E;Conseils &#x3C;/button&#x3E;
+              </code>
+            <hr>
+
+            <button class="button is-primary-yellow"> Galerie </button>
+            <code>
+                &#x3C;button class=&#x22;button is-primary-yellow&#x22;&#x3E;Galerie &#x3C;/button&#x3E;
+              </code>
+            <hr>
+
+            <button class="button is-primary-greyblue"> Services </button>
+            <code>
+                &#x3C;button class=&#x22;button is-primary-greyblue&#x22;&#x3E;Services &#x3C;/button&#x3E;
+              </code>
+            <hr>
+
+            <button class="button is-primary-black"> Contacts </button>
+            <code>
+                &#x3C;button class=&#x22;button is-primary-black&#x22;&#x3E;Contacts &#x3C;/button&#x3E;
+              </code>
+            <hr>
+
+            <button class="button is-secondary"> Secondaire </button>
+            <code>
+                &#x3C;button class=&#x22;button is-primary-black&#x22;&#x3E;Secondaire &#x3C;/button&#x3E;
+              </code>
+            <hr>
+
+            <button class="button is-savoir"> Savoir Plus </button>
+            <code>
+                &#x3C;button class=&#x22;button is-primary-black&#x22;&#x3E;Savoir Plus &#x3C;/button&#x3E;
+              </code>
+            <hr>
+
             <button class="button is-danger"> Click me! </button>
-    
             <code>
                 &#x3C;button class=&#x22;button is-danger&#x22;&#x3E;Click me! &#x3C;/button&#x3E;
               </code>
             <hr>
+
             <button class="button is-success"> Click me! </button>
-    
             <code>
                 &#x3C;button class=&#x22;button is-success&#x22;&#x3E;Click me! &#x3C;/button&#x3E;
-          </code>
+            </code>
             <hr>
+
             <button class="button is-info"> Click me! </button>
-    
             <code>
                 &#x3C;button class=&#x22;button is-info&#x22;&#x3E;Click me! &#x3C;/button&#x3E;
-          </code>
+            </code>
             <hr>
+
             <button class="button is-warning"> Click me! </button>
             <code>
                 &#x3C;button class=&#x22;button is-warning&#x22;&#x3E;Click me! &#x3C;/button&#x3E;
-          </code>
+            </code>
             <hr>
           </section>
         </div>
@@ -97,7 +138,7 @@
             <div class="row">
                 <div class="column is-6">
                 <figure class="logo">
-                    <img src="Img/rodacork.png" alt="logo">
+                    <img src="/tvieira/images/rodacork.png" alt="logo RodaCork">
                     <span>RodaCork</span>
                 </figure>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo, velit.</p>
