--- a/tvieira/Components/Buttons/buttons.css
+++ b/tvieira/Components/Buttons/buttons.css
@@ -24,8 +24,8 @@
     text-decoration: none;
     outline: none;
     font-family: ubuntu;
-    font-weight:lighter;
-    font-size:12px;
+    font-weight:normal;
+    font-size:14px;
     min-width:125px;
 }
 
