--- a/tvieira/Components/Grid/index.html
+++ b/tvieira/Components/Grid/index.html
@@ -1,75 +1,150 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Roda-Cork</title>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet"> 
-        <link rel="stylesheet" href="/tvieira/styles.css" />
-        <link rel="stylesheet buttons" href="/tvieira/Components/Buttons/button.css" > 
-        <link rel="stylesheet cards" href="/tvieira/Components/Cards/cards.css" > 
-        <link rel="stylesheet forms" href="/tvieira/Components/forms/forms.css" > 
-        <link rel="stylesheet sidebar" href="/tvieira/Components/sidebar/sidebar.css" > 
-    </head>
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Grid</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
+    <link rel="stylesheet" href="/tvieira/styles/main.css" />
+    <link rel="stylesheet buttons" href="buttons.css" > 
+    <link rel="stylesheet grid" href="grid.css">
+
+</head>
+
 <body>
 
-<header class="header">
+    <header class="header">
         
         <figure class="logo">
-            <img src="/tvieira/Img/logo-thumbnail.jpg" alt="logo">
-            <span class="page-title">
-                Sandbox
+            <img src="/tvieira/images/rodacork.png" alt="logo Rodacork">
+            <span class="page-title is-vertical-middle">
+                RodaCork
             </span>
         </figure>
 
     <nav class="navbar">
         <ul class="menu-list">
             <li class="menu-item">
-                <a href="Components/Buttons/index.html" target="_blank">Buttons</a>
+                <a href="/tvieira/components/buttons/index.html" target="_blank">Buttons</a>
             </li>
             <li class="menu-item">
-                <a href="Components/Cards/index.html" target="_blank">Cards</a>
+                <a href="/tvieira/components/cards/index.html" target="_blank">Cards</a>
             </li>
             <li class="menu-item">
-                <a href="Components/forms/index.html" target="_blank">Forms</a>
+                <a href="/tvieira/components/forms/index.html" target="_blank">Forms</a>
             </li>
             <li class="menu-item">
-                <a href="Components/sidebar/index.html" target="_blank">Sidebar</a>
+                <a href="/tvieira/components/sidebar/index.html" target="_blank">Sidebar</a>
+            </li>
+            <li class="menu-item">
+                <a href="/tvieira/components/grid/index.html" target="_blank">Grid</a>
+            </li>
+            <li class="menu-item">
+                <a href="/tvieira/dashboard/index.html" target="_blank">Dashboard</a>
             </li>
         </ul>
     </nav>
-</header>
+    </header>
 
-<main class="grid-page">
+  <main class="grid-page">
     <div class="container">
         <div class="row">
             <div class="column is-12">
                 <div class="box">
+                </div>
+            </div>
+        </div>      
+        <div class="row">          
+            <div class="column is-6">
+                <div class="box">
+                    
+                </div>
+            </div>
+        <div class="column is-6">
+            <div class="box">
+                    
+            </div>
+        </div>
+    </div>
+        <div class="row">
+          <div class="column is-4">
+              <div class="box">
+                    
+              </div>
 
-                </div>
-           <div class="column is-12">
+            </div>
+            <div class="column is-4">
                 <div class="box">
                     
                 </div>
-           <div class="column is-6">
-                <div class="box">
-                    
-                </div>    
+
+           </div>
            <div class="column is-4">
                 <div class="box">
                     
                 </div>
 
             </div>
+        </div>    
+    </div>    
+  </main>
+
+
+</body>
+
+<footer class="footer">
+    <nav class="footer-nav">
+        <div class="row">
+            <div class="column is-6">
+            <figure class="logo">
+                <img src="/tvieira/images/rodacork.png" alt="logo RodaCork">
+                <span>RodaCork</span>
+            </figure>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo, velit.</p>
+            <p>Lorem ipsum dolor sit amet.</p>
         </div>
+        </div>
+        <div class="row">
+    <div clas="column is-3">
+        <ul class="menu-list">
+            <li class="menu-item">
+                <a href="Alexandre/index.html" target="_blank">Alexandre</a>
+            </li>
+            <li class="menu-item">
+                <a href="Carlos/index.html" target="_blank">Carlos Campos</a>
+            </li>
+        </ul>
     </div>
 
+    <div clas="column is-3">
+        <ul class="menu-list">
+            <li class="menu-item">
+                <a href="inesCorreia/index.html" target="_blank">Inês Correia</a>
+            </li>
+            <li class="menu-item">
+                <a href="pedro/index.html" target="_blank">Pedro Barbosa</a>
+            </li>
+        </ul>
+    </div>
 
-</main>
+    <div clas="column is-3">
+        <ul class="menu-list">
+            <li class="menu-item">
+                <a href="tvieira/index.html" target="_blank">Tânia Vieira</a>
+            </li>
 
+            <li class="menu-item">
+                <a href="vitor/index.html" target="_blank">Vitor Coelho</a>
+            </li>
+        </ul>
+    </div>
+</div>
+</nav>
+</footer>
 
 </body>
 </html>
