--- a/jose/scss/products.scss
+++ b/jose/scss/products.scss
@@ -1,6 +1,5 @@
-@import 'components/tabs';
-@import 'components/sliders';
-
+@import 'components/tabs.scss';
+@import 'components/sliders.scss';
 
 .stars .icon{
   color:#ff9800;
